# stat386_Final_Project

./: README.md  app.py  back_to_back.py  goalie_analytics.py  goalie_fatigue.py  goalie_leaders.py  goalie_model.py  goalie_profile.py  goalie_shotmap.py  main.py  pyproject.toml  requirements.txt
data/: goalies_allseasons.csv
docs/: Final_Report.qmd  README.md
pages/: 1_Team_Analysis.py  1️⃣ Team Back-to-Back Analysis.py  2_Goalie_Analytics.py  2️⃣ Goalie Analytics.py  3_Goalie_Profile.py  4_Fatigue_Analysis.py  5_Rest_Impact.py
scripts/: fetch_goalie_data.py
src/nhlRestEffects/: __init__.py  analysis.py  cleaning.py  data_loader.py  utils.py
src/nhlRestEffects.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
streamlit_app/: 1_Team_Analysis.py  2_Goalie_Analytics.py  3_Goalie_Profile.py  4_Fatigue_Analysis.py  5_Rest_Impact.py  Home.py
streamlit_app/pages/: 1_Team_Analysis.py  2_Goalie_Analytics.py  3_Goalie_Profile.py  4_Fatigue_Analysis.py  5_Rest_Impact.py
