[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nhlRestEffects"
version = "0.1.0"
description = "NHL rest impact analytics package"
authors = [{ name = "Ethan Clayburn" }]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["nhlRestEffects"]
